--- a/content/publication/DecPOMPD_EPFL/cite.bib
+++ b/content/publication/DecPOMPD_EPFL/cite.bib
@@ -1,8 +1,9 @@
-@misc{kayaalp2023policy,
-      title={Policy Evaluation in Decentralized POMDPs with Belief Sharing}, 
-      author={Mert Kayaalp and Fatima Ghadieh and Ali H. Sayed},
-      year={2023},
-      eprint={2302.04151},
-      archivePrefix={arXiv},
-      primaryClass={cs.LG}
-}
+@ARTICLE{10129007,
+  author={Kayaalp, Mert and Ghadieh, Fatima and Sayed, Ali H.},
+  journal={IEEE Open Journal of Control Systems}, 
+  title={Policy Evaluation in Decentralized POMDPs With Belief Sharing}, 
+  year={2023},
+  volume={2},
+  number={},
+  pages={125-145},
+  doi={10.1109/OJCSYS.2023.3277760}}
